<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">raceTrace</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_old_session">raceTrace</string>
    <string name="title_activity_new_session">Set up Session</string>
    <string name="title_activity_map_display_screen">Tracking in progress</string>
    <string name="title_activity_new_session_activity_single_user">Single user session setup</string>
    <string name="title_activity_smbtserverorclient">Bluetooth session setup</string>
    <string name="button_new_session">New Session</string>
    <string name="button_load_session">Load Session</string>
    <string name="button_internet_setup">Quickstart</string>
    <string name="button_bluetooth_setup">Connect with Bluetooth</string>
    <string name="button_single_user">Single User</string>
    <string name="button_settings">Settings</string>
    <string name="new_session_text">This Screen will set up a new session</string>
    <string name="skip">Skip</string>
    <string name="addTestData">Add random datapoints</string>
    
    <!-- Main Menu -->
    <string name="menu_logo_alt">raceTrace</string>

    <!-- Session Set up -->
    <string name="button_be_server">Create Session</string>
    <string name="button_be_client">Join Session</string>
    <string name="title_activity_session_setup">SessionSetupActivity</string>
    <string name="selected_players_list">Choose players for this session:</string>
    <string name="scan_button">Scan for more devices</string>
    <string name="done">Done</string>
    <string name="title_activity_session_setup_slave">Bluetooth session setup</string>
    <string name="title_activity_new_session_activity_predefined">Predefined session setup</string>
    <string name="title_activity_new_session_activity_single_session">Single session setup</string>
    <string name="talking_to_server">Communicating with server…)</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preferences -->
    <string name="topology_title">Network Topology</string>
    <string name="topology_dialog">Select Topology</string>
    <string name="topology_default">clientServer</string>

    <string-array name="topology_entries">
        <item>Client / Server</item>
        <item>Peer to Peer</item>
    </string-array>
    <string-array name="topology_values">
        <item>clientServer</item>
        <item>p2p</item>
    </string-array>
    
    <string name="gcs_title">Geographic Coordinate System</string>
    <string name="gcs_dialog">Select GCS</string>
    <string name="gcs_default">utm</string>

    <string-array name="gcs_entries">
        <item>Lat / Long</item>
        <item>OSGB</item>
        <item>UTM</item>
    </string-array>
    <string-array name="gcs_values">
        <item>LL</item>
        <item>OSGB</item>
        <item>UTM</item>
    </string-array>
    
    
	<string name="net_loc_title">Use Network Location</string>
    <string name="username_title">Name</string>
    <string name="username_dialog">Please enter your name</string>
    <string name="username_default">DefaultName</string>
    <string name="title_activity_main_menu">MainMenu</string>

</resources>